media change and hover ajust

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <a href=""><img src="./assets/logo-dark.jpg" alt="Logo básica da Webhelp" /></a>
+        <a href=""><img src="./assets/logo-dark.png" alt="Logo básica da Webhelp" /></a>
         <p>Portais Webhelp</p>
       </div>
       <ul id="portals">
@@ -47,19 +47,34 @@
         <p>Em caso de dúvidas ou problemas, entrar em contato com o time de Suporte!</p>
         <ul>
           <li>
-            <a href="">Andressa Probst</a>
+            <a href="">
+              <img src="./assets/andressa.png" alt="">
+              Andressa
+            </a>
           </li>
           <li>
-            <a href="">Luana Probst</a>
+            <a href="">
+              <img src="./assets/luana.png" alt="">
+              Luana
+            </a>
           </li>
           <li>
-            <a href="">Pedro Caio</a>
+            <a href="">
+              <img src="./assets/pedro.png" alt="">
+              Pedro             
+            </a>
           </li>
           <li>
-            <a href="">Gabriella Santana</a>
+            <a href="">
+              <img src="./assets/gabriella.png" alt="">
+              Gabriella
+            </a>
           </li>
           <li>
-            <a href="">Angelo Pinheiro</a>
+            <a href="">
+              <img src="./assets/angelo.png" alt="">
+              Angelo
+            </a>
           </li>
         </ul>
       </footer>
