ajust the ul with the flex-warp and column-count

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         <li>
           <a href="" target="_blank">Regulariza Eudora</a>
         </li>
+        <li>
+          <a href="" target="_blank">Carrefour Telecobrança</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Atacadão Telecobrança</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Oi Cadastro</a>
+        </li>
+        <li>
+          <a href="" target="_blank">Natura & CO</a>
+        </li>
       </ul>
       <div id="social-links">
         <a href="" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
