add links to buttons and remove social-media

--- a/index.html
+++ b/index.html
@@ -27,40 +27,27 @@
       </div>
       <ul id="portals">
         <li>
-          <a href="" target="_blank">Tim Negocia</a>
+          <a id="tim" href="https://timnegocia.com.br/" target="_blank">Tim Negocia</a>
         </li>
         <li>
-          <a href="" target="_blank">Claro Negocie</a>
+          <a id="claro" href="https://claronegocie.com.br/" target="_blank">Claro Negocie</a>
         </li>
         <li>
-          <a href="" target="_blank">Regulariza Boticário</a>
+          <a id="boticario" href="https://regularizaboti.com.br/" target="_blank">Regulariza Boticário</a>
         </li>
         <li>
-          <a href="" target="_blank">Regulariza Eudora</a>
+          <a id="eudora" href="https://regularizaeudora.com.br/" target="_blank">Regulariza Eudora</a>
         </li>
         <li>
-          <a href="" target="_blank">Carrefour Telecobrança</a>
+          <a id="carrefour" href="https://cartaocarrefour.servicesdigital.com.br/access" target="_blank">Carrefour Telecobrança</a>
         </li>
         <li>
-          <a href="" target="_blank">Atacadão Telecobrança</a>
+          <a id="atacadao" href="https://regularize.servicesdigital.com.br/" target="_blank">Atacadão Telecobrança</a>
         </li>
         <li>
-          <a href="" target="_blank">Oi Cadastro</a>
-        </li>
-        <li>
-          <a href="" target="_blank">Natura & CO</a>
+          <a id="natura" href="https://negocienaturaeavon.com.br/" target="_blank">Natura & CO</a>
         </li>
       </ul>
-      <div id="social-links">
-        <a href="" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-        <a href="" target="_blank"
-          ><ion-icon name="logo-instagram"></ion-icon
-        ></a>
-        <a href="" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-        <a href="" target="_blank"
-          ><ion-icon name="logo-linkedin"></ion-icon
-        ></a>
-      </div>
       <footer>
         <p>
           Em caso de dúvidas ou problemas, entrar em contato com o time de
