--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <a href=""
+        <a id="webhelp" href="https://jobsbrasil.webhelp.com" target="_blank"
           ><img src="./assets/logo-dark.png" alt="Logo básica da Webhelp"
         /></a>
         <p id="title">Portais Webhelp - Produção</p>
@@ -27,25 +27,56 @@
       </div>
       <ul id="portals">
         <li>
-          <a id="tim" href="https://timnegocia.com.br/" target="_blank">Tim Negocia</a>
+          <a id="tim" href="https://timnegocia.com.br/" target="_blank"
+            >Tim Negocia</a
+          >
         </li>
         <li>
-          <a id="claro" href="https://claronegocie.com.br/" target="_blank">Claro Negocie</a>
+          <a id="claro" href="https://claronegocie.com.br/" target="_blank"
+            >Claro Negocie</a
+          >
         </li>
         <li>
-          <a id="boticario" href="https://regularizaboti.com.br/" target="_blank">Regulariza Boticário</a>
+          <a
+            id="boticario"
+            href="https://regularizaboti.com.br/"
+            target="_blank"
+            >Regulariza Boticário</a
+          >
         </li>
         <li>
-          <a id="eudora" href="https://regularizaeudora.com.br/" target="_blank">Regulariza Eudora</a>
+          <a id="eudora" href="https://regularizaeudora.com.br/" target="_blank"
+            >Regulariza Eudora</a
+          >
         </li>
         <li>
-          <a id="carrefour" href="https://cartaocarrefour.servicesdigital.com.br/access" target="_blank">Carrefour Telecobrança</a>
+          <a
+            id="carrefour"
+            href="https://cartaocarrefour.servicesdigital.com.br/access"
+            target="_blank"
+            >Carrefour Telecobrança</a
+          >
         </li>
         <li>
-          <a id="atacadao" href="https://regularize.servicesdigital.com.br/" target="_blank">Atacadão Telecobrança</a>
+          <a
+            id="atacadao"
+            href="https://regularize.servicesdigital.com.br/"
+            target="_blank"
+            >Atacadão Telecobrança</a
+          >
         </li>
         <li>
-          <a id="natura" href="https://negocienaturaeavon.com.br/" target="_blank">Natura & CO</a>
+          <a id="oi" href="https://oicadastro.com.br/" target="_blank"
+            >Oi Cadastro</a
+          >
+        </li>
+        <li>
+          <a
+            id="natura"
+            href="https://negocienaturaeavon.com.br/"
+            target="_blank"
+            >Natura & CO</a
+          >
         </li>
       </ul>
       <footer>
