feature new team

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a id="webhelp" href="https://jobsbrasil.webhelp.com" target="_blank"
           ><img src="./assets/logo-dark.png" alt="Logo básica da Webhelp"
         /></a>
-        <p id="title">Portais Webhelp - Produção</p>
+        <p id="title">Portais Concentrix - Produção</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -66,8 +66,8 @@
           >
         </li>
         <li>
-          <a id="oi" href="https://oicadastro.com.br/" target="_blank"
-            >Oi Cadastro</a
+          <a id="boticarioColombia" href="https://regularizagrupooboticario.com/" target="_blank"
+            >Boticário Colombia</a
           >
         </li>
         <li>
@@ -78,23 +78,25 @@
             >Natura & CO</a
           >
         </li>
+        <li>
+          <a
+            id="quintoAndar"
+            href="https://negociequintoandar.com.br/"
+            target="_blank"
+            >Quinto Andar</a
+          >
+        </li>
       </ul>
       <footer>
         <p>
           Em caso de dúvidas ou problemas, entrar em contato com o time de
-          Suporte!
+          sustentação!
         </p>
         <ul>
           <li>
-            <a href="https://wa.me/5541997706882" target="_blank">
-              <img src="./assets/andressa.png" alt="" />
-              Andressa
-            </a>
-          </li>
-          <li>
-            <a href="https://wa.me/5541999652857" target="_blank">
-              <img src="./assets/luana.png" alt="" />
-              Luana
+            <a href="https://wa.me/5541991334024" target="_blank">
+              <img src="./assets/diogo.png" alt="" />
+              Diogo
             </a>
           </li>
           <li>
@@ -107,12 +109,6 @@
             <a href="https://wa.me/5541995060984" target="_blank">
               <img src="./assets/gabriella.png" alt="" />
               Gabriella
-            </a>
-          </li>
-          <li>
-            <a href="https://wa.me/5541936180738" target="_blank">
-              <img src="./assets/angelo.png" alt="" />
-              Angelo
             </a>
           </li>
         </ul>
