--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
           >
         </li>
         <li>
-          <a id="boticarioColombia" href="https://regularizagrupooboticario.com/" target="_blank"
+          <a
+            id="boticarioColombia"
+            href="https://regularizagrupooboticario.com/"
+            target="_blank"
             >Boticário Colombia</a
           >
         </li>
@@ -87,6 +90,24 @@
           >
         </li>
       </ul>
+      <div class="divider"></div>
+      <section>
+        <p>
+          Abaixo temos a lista de domínios e certificados contratados, com o
+          status de cada um deles e suas respectivas datas de expiração.
+        </p>
+        <ul id="domains">
+          <li>
+            <a
+              id="domains_and_certificate"
+              href="https://docs.google.com/spreadsheets/d/11oQulZm9lLl9OpeAPT7UStp7DMw5DCTfdYct_Bc4cHo/edit?usp=sharing"
+              target="_blank"
+              >Domínios e Certificados</a
+            >
+          </li>
+        </ul>
+      </section>
+      <div class="divider"></div>
       <footer>
         <p>
           Em caso de dúvidas ou problemas, entrar em contato com o time de
@@ -108,7 +129,7 @@
           <li>
             <a href="https://wa.me/5541995060984" target="_blank">
               <img src="./assets/gabriella.png" alt="" />
-              Gabriella
+              Gabi
             </a>
           </li>
         </ul>
